@@ -113,7 +113,7 @@ $w-> insert( "ListBox",
 	hScroll        => 1,
 	multiSelect    => 0,
 	extendedSelect => 1,
-	dragable        => 1,
+	draggable       => 1,
 	name            => 'ListBox1',
 	font            => { size => 24},
 	items           => ['Items', 'created', 'indirect'],
